--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "chalk": "^2.4.2",
     "dotenv": "^2.0.0",
     "ejs": "^2.6.2",
     "express": "^4.18.2",
     "morgan": "^1.9.1",
-    "pg": "^8.5.0",
-    "sass": "^1.35.1"
+    "node-sass-middleware": "^1.1.0",
+    "pg": "^8.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.10"
+    "nodemon": "^2.0.10",
+    "sass": "^1.69.5"
   }
 }
